fixed sidebar being too big for some devices

--- a/style.css
+++ b/style.css
@@ -262,7 +262,8 @@ div.sidebar {
   background: var(--primary-color);
   box-shadow: var(--shadow);
   height: 100vh;
-  width: 20rem;
+  width: 50vw;
+  min-width: 15rem;
   border-top-right-radius: var(--sidebar-border-radius);
   border-bottom-right-radius: var(--sidebar-border-radius);
   transition: all 0.3s;
